# havayolu_optimizasyonu_2026

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  FINAL_VERSION_READY.md  INDUSTRY_ROADMAP.md  Makefile  PRODUCT_ROADMAP.md  PROJECT.md  README.md  READY_FOR_SUBMISSION.md  SECENEK_A_COMPLETE.md  SECENEK_B_ADVANCED_READY.md  SKILLS.md  SUBMISSION_PACKAGE.md  TEKNOFEST_2026_TTR_FINAL.md  TEKNOFEST_2026_TTR_FINAL_v1.4_ABSOLUTE_FINAL.md  TEKNOFEST_2026_TTR_v1.4_PDF_READY.md  TEKNOFEST_TTR_Raporu.md  UPLOAD_MANIFEST.txt  academic_header.tex  alembic.ini  aviation.db  docker-compose.yml  project.md  pyproject.toml  render_mermaid.html  requirements.txt  skill.md  task.md  verify_phase3.py  verify_phase4.py
.github/workflows/: main.yml
dashboard/: app.py
data/: benchmark_10k_flights.csv
deploy/: db_backup.sh  prod_up.sh
deploy/monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
docs/: FINAL_CAPABILITIES_REPORT.md  LITERATURE_REVIEW.md  ON_DEGERLENDIRME_RAPORU_v10.md  presentation_slides.md
docs/makale/: Hybrid CP-SAT and Quantum-Inspired Optimization for Airline Disruption Recovery with Explainable Decision Support -paper format draft.docx  Hybrid_CPSAT_QIGA_XAI_Airline_Disruption_Recovery.docx  (+1 more)
docs/thesis/: 00_kapak_ozet.md  (+14 more)
scratch/: check_users.py  run_case_study.py  run_real_validation.py
src/: init_demo.py  main.aux  main.out  verify_integration.py  verify_v7.py  verify_v8.py
tests/: conftest.py  test_audit_flow.py  test_auth_api.py  test_core.py  test_integration.py  test_live_sync.py  test_models.py  test_solver.py
(+109 files in other folders)
