[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "havayolu_optimizasyonu_2026"
version = "2.0.0"
description = "TEKNOFEST 2026 Havayolu Operasyonel Karar Destek Sistemi - Enterprise Edition"
authors = [
    {name = "Kursat", email = "kursat@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ortools>=9.6.0",
    "streamlit>=1.30.0",
    "plotly>=5.15.0",
    "xgboost>=2.0.0",
    "shap>=0.42.0",
    "sqlalchemy>=2.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
